[package]
name = "index_btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.0"
bitcoincore-rpc = "0.19.0"
rocksdb = "0.22.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
chrono = "0.4.38"
num_cpus = "1.16.0"
sha2 = "0.10.8"
base16 = "0.2.1"
clap = "4.5.4"

[profile.release]
debug = false
